Schema settings for packages extreme.cms and admin.commerce; + remove WFID joins

--- a/schema/extremeframework-git.links.ini
+++ b/schema/extremeframework-git.links.ini
@@ -1,77 +1,58 @@
 [ACCESS_RIGHT]
 ID_USER_GROUP = USER_GROUP:ID
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
-
-[ACL_TYPE]
-WFID = WORKFLOW_STAGE:CODE
 
 [ADMIN_FILTER]
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
-
-[ADMIN_LABEL]
-WFID = WORKFLOW_STAGE:CODE
-
-[ADMIN_LANGUAGE]
-WFID = WORKFLOW_STAGE:CODE
 
 [ADMIN_LANGUAGE_ITEM]
 ID_ADMIN_LANGUAGE = ADMIN_LANGUAGE:ID
 ID_ADMIN_LABEL = ADMIN_LABEL:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [ADMIN_LAYOUT_FIELD]
 MODULE = ADMIN_MODULE:MODULE
 ID_ADMIN_LAYOUT_SECTION = ADMIN_LAYOUT_SECTION:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [ADMIN_LAYOUT_SECTION]
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
-
-[ADMIN_MENU]
-WFID = WORKFLOW_STAGE:CODE
 
 [ADMIN_MENU_ITEM]
 ID_ADMIN_MENU = ADMIN_MENU:ID
 PARENT = ADMIN_MENU_ITEM:ID
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
 
-[ADMIN_MODULE]
-WFID = WORKFLOW_STAGE:CODE
+[ADMIN_ORDER]
+ID_PAYMENT_TYPE = PAYMENT_TYPE:CODE
+ID_ADMIN_ORDER_STATUS = ADMIN_ORDER_STATUS:CODE
+
+[ADMIN_ORDER_ITEM]
+ID_ADMIN_ORDER = ADMIN_ORDER:ID
+ID_ADMIN_PRODUCT = ADMIN_PRODUCT:ID
+
+[ADMIN_PRODUCT]
+PRODUCT_ID_PAGE = PAGE:ID
 
 [ADMIN_SEQUENCE]
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
 
 [ADMIN_VIEW]
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
 
 [CHANGE_LOG]
 MODULE = ADMIN_MODULE:MODULE
 ID_USER = USER:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [DASHBOARD]
 ID_ADMIN_MENU = ADMIN_MENU:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [FIELD]
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
 
 [FIELD_ACL]
 MODULE = ADMIN_MODULE:MODULE
 ID_USER_GROUP = USER_GROUP:ID
 ID_USER = USER:ID
 ID_ACL_TYPE = ACL_TYPE:ID
-WFID = WORKFLOW_STAGE:CODE
-
-[MENU]
-WFID = WORKFLOW_STAGE:CODE
 
 [MENU_ITEM]
 ID_MENU = MENU:CODE
@@ -80,7 +61,6 @@ ID_PAGE = PAGE:ID
 ID_POST = POST:ID
 ID_POST_CATEGORY = POST_CATEGORY:ID
 ACL_ID_USER_GROUP = USER_GROUP:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [OBJECT_ACL]
 MODULE = ADMIN_MODULE:MODULE
@@ -89,10 +69,6 @@ ID_USER = USER:ID
 ARG_ID_USER_GROUP = USER_GROUP:ID
 ARG_ID_USER = USER:ID
 ID_ACL_TYPE = ACL_TYPE:ID
-WFID = WORKFLOW_STAGE:CODE
-
-[OPTION]
-WFID = WORKFLOW_STAGE:CODE
 
 [PAGE]
 PARENT = PAGE:ID
@@ -100,143 +76,89 @@ ID_TEMPLATE = TEMPLATE:CODE
 CUSTOM_TOP_ID_MENU = MENU:CODE
 CUSTOM_SIDE_ID_MENU = MENU:CODE
 VIEW_MORE_ID_PAGE = PAGE:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [PAGE_GALLERY]
 ID_PAGE = PAGE:ID
 LINK_ID_PAGE = PAGE:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [PAGE_LINK]
 ID_PAGE = PAGE:ID
 LINK_ID_PAGE = PAGE:ID
 ID_PAGE_LINK_TYPE = PAGE_LINK_TYPE:CODE
-WFID = WORKFLOW_STAGE:CODE
-
-[PAGE_LINK_TYPE]
-WFID = WORKFLOW_STAGE:CODE
 
 [PAGE_SECTION]
 ID_PAGE = PAGE:ID
 PARENT = PAGE_SECTION:CODE
 VIEW_MORE_ID_PAGE = PAGE:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [PAGE_WIDGET]
 ID_PAGE = PAGE:ID
 ID_WIDGET_TYPE = WIDGET_TYPE:CODE
 ID_WIDGET_POSITION = WIDGET_POSITION:CODE
-WFID = WORKFLOW_STAGE:CODE
 
 [PARAMETER]
 ID_PARAMETER_GROUP = PARAMETER_GROUP:ID
 ID_PARAMETER_TYPE = PARAMETER_TYPE:ID
-WFID = WORKFLOW_STAGE:CODE
-
-[PARAMETER_GROUP]
-WFID = WORKFLOW_STAGE:CODE
-
-[PARAMETER_TYPE]
-WFID = WORKFLOW_STAGE:CODE
 
 [POST]
 ID_POST_TYPE = POST_TYPE:CODE
 ID_POST_CATEGORY = POST_CATEGORY:ID
 ID_TEMPLATE = TEMPLATE:CODE
-WFID = WORKFLOW_STAGE:CODE
 
 [POST_CATEGORY]
 PARENT = POST_CATEGORY:ID
 ID_TEMPLATE = TEMPLATE:CODE
-WFID = WORKFLOW_STAGE:CODE
 
 [POST_GALLERY]
 ID_POST = POST:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [POST_RELATION]
 ID_POST = POST:ID
 PEER_ID_POST = POST:ID
 ID_POST_RELATION_TYPE = POST_RELATION_TYPE:CODE
-WFID = WORKFLOW_STAGE:CODE
-
-[POST_RELATION_TYPE]
-WFID = WORKFLOW_STAGE:CODE
 
 [POST_SECTION]
 ID_POST = POST:ID
-WFID = WORKFLOW_STAGE:CODE
-
-[POST_TYPE]
-WFID = WORKFLOW_STAGE:CODE
 
 [RECYCLE_BIN]
 MODULE = ADMIN_MODULE:MODULE
 ID_USER = USER:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [SCREEN]
 ID_WORKFLOW = WORKFLOW:CODE
-WFID = WORKFLOW_STAGE:CODE
 
 [SCREEN_FIELD]
 ID_SCREEN = SCREEN:CODE
 ID_VALUE_TYPE = VALUE_TYPE:CODE
-WFID = WORKFLOW_STAGE:CODE
 
 [TEMPLATE]
 MODULE = ADMIN_MODULE:MODULE
-WFID = WORKFLOW_STAGE:CODE
-
-[USER]
-WFID = WORKFLOW_STAGE:CODE
 
 [USER_GROUP]
 DEFAULT_ID_DASHBOARD = DASHBOARD:ID
 PARENT = USER_GROUP:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [USER_LOG]
 ID_USER = USER:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [USER_MEMBERSHIP]
 ID_USER = USER:ID
 ID_USER_GROUP = USER_GROUP:ID
 ID_USER_ROLE = USER_ROLE:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [USER_PREFERENCE]
 ID_USER = USER:ID
 ID_DASHBOARD = DASHBOARD:ID
-WFID = WORKFLOW_STAGE:CODE
-
-[USER_ROLE]
-WFID = WORKFLOW_STAGE:CODE
-
-[VALUE_TYPE]
-WFID = WORKFLOW_STAGE:CODE
-
-[WIDGET_POSITION]
-WFID = WORKFLOW_STAGE:CODE
-
-[WIDGET_TYPE]
-WFID = WORKFLOW_STAGE:CODE
-
-[WORKFLOW]
-WFID = WORKFLOW_STAGE:CODE
 
 [WORKFLOW_APPLICATION]
 MODULE = ADMIN_MODULE:MODULE
 ID_WORKFLOW = WORKFLOW:CODE
-WFID = WORKFLOW_STAGE:CODE
 
 [WORKFLOW_LOG]
 ID_WORKFLOW = WORKFLOW:CODE
 ID_WORKFLOW_TRANSITION = WORKFLOW_TRANSITION:ID
 MODULE = ADMIN_MODULE:MODULE
 ID_USER = USER:ID
-WFID = WORKFLOW_STAGE:CODE
 
 [WORKFLOW_STAGE]
 ID_WORKFLOW = WORKFLOW:CODE
@@ -248,4 +170,3 @@ END_ID_WORKFLOW_STAGE = WORKFLOW_STAGE:CODE
 ID_USER_GROUP = USER_GROUP:ID
 ID_USER_ROLE = USER_ROLE:ID
 TRANSITION_ID_SCREEN = SCREEN:CODE
-WFID = WORKFLOW_STAGE:CODE
