--- a/schema/extremeframework-git.ini
+++ b/schema/extremeframework-git.ini
@@ -44,6 +44,23 @@ UUID = 2
 [ADMIN_FILTER__keys]
 ID = N
 
+[ADMIN_FILTER_CONDITION]
+ID = 129
+REFID = 2
+ID_ADMIN_FILTER = 1
+ID_FIELD = 1
+ID_VALUE_OPERATOR = 1
+VALUE = 2
+ID_CONDITION_OPERATOR = 1
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[ADMIN_FILTER_CONDITION__keys]
+ID = N
+
 [ADMIN_LABEL]
 ID = 129
 REFID = 2
@@ -316,6 +333,20 @@ UUID = 2
 [CHANGE_LOG__keys]
 ID = N
 
+[CONDITION_OPERATOR]
+ID = 129
+REFID = 2
+NAME = 2
+OPERATOR = 2
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[CONDITION_OPERATOR__keys]
+ID = N
+
 [DASHBOARD]
 ID = 129
 REFID = 2
@@ -330,6 +361,21 @@ WFID = 2
 UUID = 2
 
 [DASHBOARD__keys]
+ID = N
+
+[DOCUMENT]
+ID = 129
+REFID = 2
+NAME = 2
+SPECIFICATION = 34
+ATTACHMENT = 2
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 1
+UUID = 2
+
+[DOCUMENT__keys]
 ID = N
 
 [FIELD]
@@ -365,6 +411,178 @@ WFID = 2
 UUID = 2
 
 [FIELD_ACL__keys]
+ID = N
+
+[ISSUE]
+ID = 129
+REFID = 2
+TITLE = 2
+ID_PROJECT = 1
+KEY = 2
+ID_ISSUE_TYPE = 2
+DUE_DATE = 6
+ID_PROJECT_COMPONENT = 1
+ID_PROJECT_VERSION = 1
+ASSIGNED_ID_USER = 1
+DESCRIPTION = 34
+ESTIMATE = 2
+ACTUAL = 2
+ID_PRIORITY = 1
+ORDERING = 17
+ID_ISSUE_STATUS = 2
+ID_ISSUE_RESOLUTION = 2
+DATE_CREATED = 14
+DATE_UPDATED = 14
+DATE_ASSIGNED = 14
+DATE_STARTED = 14
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[ISSUE__keys]
+ID = N
+
+[ISSUE_ACTIVITY]
+ID = 129
+REFID = 2
+ID_ISSUE = 1
+ID_USER = 1
+ACTIVITY = 2
+NOTE = 34
+DATE = 14
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[ISSUE_ACTIVITY__keys]
+ID = N
+
+[ISSUE_ATTACHMENT]
+ID = 129
+REFID = 2
+ID_ISSUE = 1
+NAME = 2
+FILE = 2
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[ISSUE_ATTACHMENT__keys]
+ID = N
+
+[ISSUE_COMMENT]
+ID = 129
+REFID = 2
+ID_ISSUE = 1
+ID_USER = 1
+COMMENT = 34
+DATE = 6
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[ISSUE_COMMENT__keys]
+ID = N
+
+[ISSUE_LINKING_TYPE]
+ID = 129
+REFID = 2
+NAME = 2
+OUTWARD_RELATION = 2
+INWARD_RELATION = 2
+ORDERING = 17
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 1
+UUID = 2
+
+[ISSUE_LINKING_TYPE__keys]
+ID = N
+
+[ISSUE_RESOLUTION]
+ID = 129
+REFID = 2
+NAME = 2
+CODE = 2
+ORDERING = 17
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 1
+UUID = 2
+
+[ISSUE_RESOLUTION__keys]
+ID = N
+
+[ISSUE_STATUS]
+ID = 129
+REFID = 2
+NAME = 2
+CODE = 2
+ORDERING = 17
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 1
+UUID = 2
+
+[ISSUE_STATUS__keys]
+ID = N
+
+[ISSUE_TYPE]
+ID = 129
+REFID = 2
+NAME = 2
+CODE = 2
+ORDERING = 17
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 1
+UUID = 2
+
+[ISSUE_TYPE__keys]
+ID = N
+
+[ISSUE_WORKLOG]
+ID = 129
+REFID = 2
+ID_USER = 1
+ID_ISSUE = 1
+ELLAPSED_TIME = 2
+DATE = 14
+NOTE = 2
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[ISSUE_WORKLOG__keys]
+ID = N
+
+[LINKING_ISSUE]
+ID = 129
+REFID = 2
+ID_ISSUE = 1
+ID_ISSUE_LINKING_TYPE = 1
+RELATED_ID_ISSUE = 1
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[LINKING_ISSUE__keys]
 ID = N
 
 [MENU]
@@ -783,6 +1001,82 @@ UUID = 2
 [POST_TYPE__keys]
 ID = N
 
+[PRIORITY]
+ID = 129
+REFID = 2
+NAME = 2
+ORDERING = 17
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 1
+UUID = 2
+
+[PRIORITY__keys]
+ID = N
+
+[PROJECT]
+ID = 129
+REFID = 2
+NAME = 2
+KEY = 2
+INFORMATION = 34
+LEAD_ID_USER = 1
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[PROJECT__keys]
+ID = N
+
+[PROJECT_COMPONENT]
+ID = 129
+REFID = 2
+NAME = 2
+ID_PROJECT = 1
+LEAD_ID_USER = 1
+ORDERING = 17
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[PROJECT_COMPONENT__keys]
+ID = N
+
+[PROJECT_USER]
+ID = 129
+REFID = 2
+ID_PROJECT = 1
+ID_USER = 1
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[PROJECT_USER__keys]
+ID = N
+
+[PROJECT_VERSION]
+ID = 129
+REFID = 2
+NAME = 2
+ID_PROJECT = 1
+ORDERING = 17
+DUE_DATE = 6
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[PROJECT_VERSION__keys]
+ID = N
+
 [RECYCLE_BIN]
 ID = 129
 REFID = 2
@@ -960,6 +1254,20 @@ UUID = 2
 [USER_ROLE__keys]
 ID = N
 
+[VALUE_OPERATOR]
+ID = 129
+REFID = 2
+NAME = 2
+OPERATOR = 2
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[VALUE_OPERATOR__keys]
+ID = N
+
 [VALUE_TYPE]
 ID = 129
 REFID = 2
@@ -1009,7 +1317,7 @@ NAME = 2
 CODE = 2
 DESCRIPTION = 34
 GUID = 1
-WFID = 2
+WFID = 1
 JSON = 34
 UDID = 1
 UUID = 2
@@ -1035,7 +1343,7 @@ ID = N
 ID = 129
 REFID = 2
 ID_WORKFLOW = 2
-ID_WORKFLOW_TRANSITION = 1
+ID_WORKFLOW_TRANSITION = 2
 MODULE = 2
 OBJECT_ID = 1
 DATE = 6
@@ -1043,8 +1351,8 @@ ID_USER = 1
 DETAILS = 2
 GUID = 1
 JSON = 34
-UDID = 1
 WFID = 2
+UDID = 1
 UUID = 2
 
 [WORKFLOW_LOG__keys]
@@ -1073,12 +1381,14 @@ ID = 129
 REFID = 2
 ID_WORKFLOW = 2
 NAME = 2
+CODE = 2
 START_ID_WORKFLOW_STAGE = 2
 END_ID_WORKFLOW_STAGE = 2
 ACTION = 2
 ID_USER_GROUP = 1
 ID_USER_ROLE = 1
 TRANSITION_ID_SCREEN = 2
+ORDERING = 17
 GUID = 1
 JSON = 34
 WFID = 2
