--- a/schema/extremeframework-git.links.ini
+++ b/schema/extremeframework-git.links.ini
@@ -5,6 +5,12 @@ MODULE = ADMIN_MODULE:MODULE
 [ADMIN_FILTER]
 MODULE = ADMIN_MODULE:MODULE
 
+[ADMIN_FILTER_CONDITION]
+ID_ADMIN_FILTER = ADMIN_FILTER:ID
+ID_FIELD = FIELD:ID
+ID_VALUE_OPERATOR = VALUE_OPERATOR:ID
+ID_CONDITION_OPERATOR = CONDITION_OPERATOR:ID
+
 [ADMIN_LANGUAGE_ITEM]
 ID_ADMIN_LANGUAGE = ADMIN_LANGUAGE:ID
 ID_ADMIN_LABEL = ADMIN_LABEL:ID
@@ -53,6 +59,36 @@ MODULE = ADMIN_MODULE:MODULE
 ID_USER_GROUP = USER_GROUP:ID
 ID_USER = USER:ID
 ID_ACL_TYPE = ACL_TYPE:ID
+
+[ISSUE]
+ID_PROJECT = PROJECT:ID
+ID_ISSUE_TYPE = ISSUE_TYPE:CODE
+ID_PROJECT_COMPONENT = PROJECT_COMPONENT:ID
+ID_PROJECT_VERSION = PROJECT_VERSION:ID
+ASSIGNED_ID_USER = USER:ID
+ID_PRIORITY = PRIORITY:ID
+ID_ISSUE_STATUS = ISSUE_STATUS:CODE
+ID_ISSUE_RESOLUTION = ISSUE_RESOLUTION:CODE
+
+[ISSUE_ACTIVITY]
+ID_ISSUE = ISSUE:ID
+ID_USER = USER:ID
+
+[ISSUE_ATTACHMENT]
+ID_ISSUE = ISSUE:ID
+
+[ISSUE_COMMENT]
+ID_ISSUE = ISSUE:ID
+ID_USER = USER:ID
+
+[ISSUE_WORKLOG]
+ID_USER = USER:ID
+ID_ISSUE = ISSUE:ID
+
+[LINKING_ISSUE]
+ID_ISSUE = ISSUE:ID
+ID_ISSUE_LINKING_TYPE = ISSUE_LINKING_TYPE:ID
+RELATED_ID_ISSUE = ISSUE:ID
 
 [MENU_ITEM]
 ID_MENU = MENU:CODE
@@ -120,6 +156,20 @@ ID_POST_RELATION_TYPE = POST_RELATION_TYPE:CODE
 [POST_SECTION]
 ID_POST = POST:ID
 
+[PROJECT]
+LEAD_ID_USER = USER:ID
+
+[PROJECT_COMPONENT]
+ID_PROJECT = PROJECT:ID
+LEAD_ID_USER = USER:ID
+
+[PROJECT_USER]
+ID_PROJECT = PROJECT:ID
+ID_USER = USER:ID
+
+[PROJECT_VERSION]
+ID_PROJECT = PROJECT:ID
+
 [RECYCLE_BIN]
 MODULE = ADMIN_MODULE:MODULE
 ID_USER = USER:ID
@@ -156,7 +206,7 @@ ID_WORKFLOW = WORKFLOW:CODE
 
 [WORKFLOW_LOG]
 ID_WORKFLOW = WORKFLOW:CODE
-ID_WORKFLOW_TRANSITION = WORKFLOW_TRANSITION:ID
+ID_WORKFLOW_TRANSITION = WORKFLOW_TRANSITION:CODE
 MODULE = ADMIN_MODULE:MODULE
 ID_USER = USER:ID
 
