add facebook sdk-v4-5.0

--- a/schema/extremeframework-git.ini
+++ b/schema/extremeframework-git.ini
@@ -626,6 +626,20 @@ UUID = 2
 [MENU_ITEM__keys]
 ID = N
 
+[NOTE]
+ID = 129
+REFID = 2
+TITLE = 2
+CONTENT = 34
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 1
+UUID = 2
+
+[NOTE__keys]
+ID = N
+
 [OBJECT_ACL]
 ID = 129
 REFID = 2
@@ -1159,6 +1173,8 @@ GENDER = 17
 DATE_OF_BIRTH = 6
 FORCE_PASSWORD_CHANGE = 17
 IS_EMAIL_VERIFIED = 17
+LOCALE = 2
+CURRENCY = 2
 FACEBOOK_ID = 2
 FACEBOOK_OAUTH_ID = 2
 GOOGLE_ID = 2
@@ -1239,6 +1255,41 @@ WFID = 2
 UUID = 2
 
 [USER_PREFERENCE__keys]
+ID = N
+
+[USER_QUOTA]
+ID = 129
+REFID = 2
+ID_USER_GROUP = 1
+MODULE = 2
+OVERALL_LIMIT = 1
+MONTHLY_LIMIT = 1
+DAILY_LIMIT = 1
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[USER_QUOTA__keys]
+ID = N
+
+[USER_QUOTA_LOG]
+ID = 129
+REFID = 2
+ID_USER = 1
+MODULE = 2
+NBR_OVERALL = 1
+NBR_MONTHLY = 1
+NBR_DAILY = 1
+LATEST_UPDATE = 6
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[USER_QUOTA_LOG__keys]
 ID = N
 
 [USER_ROLE]
