user locale + currency

--- a/schema/extremeframework-git.ini
+++ b/schema/extremeframework-git.ini
@@ -1159,6 +1159,8 @@ GENDER = 17
 DATE_OF_BIRTH = 6
 FORCE_PASSWORD_CHANGE = 17
 IS_EMAIL_VERIFIED = 17
+LOCALE = 2
+CURRENCY = 2
 FACEBOOK_ID = 2
 FACEBOOK_OAUTH_ID = 2
 GOOGLE_ID = 2
