update schema files

--- a/schema/extremeframework-git.ini
+++ b/schema/extremeframework-git.ini
@@ -183,6 +183,7 @@ ID = 129
 REFID = 2
 NAME = 2
 MODULE = 2
+ID_ADMIN_PACKAGE = 2
 PREFIX = 2
 AVAILABLE_ACTIONS = 2
 IS_COMMENT_ENABLED = 17
@@ -195,87 +196,111 @@ UUID = 2
 [ADMIN_MODULE__keys]
 ID = N
 
-[ADMIN_ORDER]
-ID = 129
-REFID = 2
-CUSTOMER_ID_COUNTRY = 2
-CUSTOMER_FIRST_NAME = 2
-CUSTOMER_LAST_NAME = 2
-CUSTOMER_ADDRESS = 2
-CUSTOMER_CITY = 2
-CUSTOMER_STATE = 2
-CUSTOMER_ZIP_CODE = 2
-CUSTOMER_EMAIL = 2
-CUSTOMER_PHONE = 2
-TOTAL_VALUE = 1
-COUPON_CODE = 2
-COUPON_DISCOUNT = 1
-ID_PAYMENT_TYPE = 2
-CREATION_DATE = 14
-PAYMENT_DATE = 14
-PAYMENT_REF = 2
-REFUND_DATE = 14
-REFUND_REF = 2
-PROCESSED_DATE = 14
-ID_ADMIN_ORDER_STATUS = 2
-NOTE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[ADMIN_ORDER__keys]
-ID = N
-
-[ADMIN_ORDER_ITEM]
-ID = 129
-REFID = 2
-ID_ADMIN_ORDER = 1
-ID_ADMIN_PRODUCT = 1
-QUANTITY = 1
-PRICE = 1
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[ADMIN_ORDER_ITEM__keys]
-ID = N
-
-[ADMIN_ORDER_STATUS]
+[ADMIN_PACKAGE]
 ID = 129
 REFID = 2
 NAME = 2
 CODE = 2
-ORDERING = 17
+ID_ADMIN_PACKAGE_CATEGORY = 1
+IMAGE = 2
+DESCRIPTION = 34
+ENTRY_PATH = 2
+AUTHOR = 2
+VERSION = 2
+PACKAGE_URL = 2
+AUTHOR_URL = 2
+PACKAGE_PATH = 2
+INSTALLATION_DATE = 6
+LATEST_UPDATE = 6
+IS_USER_PACKAGE = 17
 GUID = 1
 JSON = 34
 UDID = 1
 WFID = 2
 UUID = 2
 
-[ADMIN_ORDER_STATUS__keys]
+[ADMIN_PACKAGE__keys]
 ID = N
 
-[ADMIN_PRODUCT]
+[ADMIN_PACKAGE_CATEGORY]
 ID = 129
 REFID = 2
-TITLE = 2
-TAG_LINE = 2
+NAME = 2
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[ADMIN_PACKAGE_CATEGORY__keys]
+ID = N
+
+[ADMIN_PACKAGE_MENU]
+ID = 129
+REFID = 2
+ID_ADMIN_PACKAGE = 2
+ID_ADMIN_MENU = 1
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[ADMIN_PACKAGE_MENU__keys]
+ID = N
+
+[ADMIN_PACKAGE_PERMISSION]
+ID = 129
+NAME = 2
+REFID = 2
+ID_ADMIN_PACKAGE = 2
+ID_PERMISSION_SET = 1
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[ADMIN_PACKAGE_PERMISSION__keys]
+ID = N
+
+[ADMIN_PACKAGE_SHORTCUT]
+ID = 129
+REFID = 2
+NAME = 2
+ID_ADMIN_PACKAGE = 2
 IMAGE = 2
-LIST_PRICE = 1
-PRICE = 1
+PATH = 34
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[ADMIN_PACKAGE_SHORTCUT__keys]
+ID = N
+
+[ADMIN_PLUGIN]
+ID = 129
+REFID = 2
+NAME = 2
+AUTHOR = 2
+VERSION = 2
 DESCRIPTION = 34
-PRODUCT_ID_PAGE = 1
+PLUGIN_URL = 2
+AUTHOR_URL = 2
+PLUGIN_PATH = 2
+INSTALLATION_DATE = 6
+LATEST_UPDATE = 6
+ORDERING = 17
+IS_ENABLED = 17
 GUID = 1
 JSON = 34
 UDID = 1
-WFID = 2
+WFID = 1
 UUID = 2
 
-[ADMIN_PRODUCT__keys]
+[ADMIN_PLUGIN__keys]
 ID = N
 
 [ADMIN_SEQUENCE]
@@ -347,6 +372,22 @@ UUID = 2
 [CONDITION_OPERATOR__keys]
 ID = N
 
+[CUSTOM_ACCESS_RIGHT]
+ID = 129
+REFID = 2
+ID_USER = 1
+ID_PERMISSION_SET = 1
+VALID_FROM = 14
+VALID_UNTIL = 14
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[CUSTOM_ACCESS_RIGHT__keys]
+ID = N
+
 [DASHBOARD]
 ID = 129
 REFID = 2
@@ -361,21 +402,6 @@ WFID = 2
 UUID = 2
 
 [DASHBOARD__keys]
-ID = N
-
-[DOCUMENT]
-ID = 129
-REFID = 2
-NAME = 2
-SPECIFICATION = 34
-ATTACHMENT = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 1
-UUID = 2
-
-[DOCUMENT__keys]
 ID = N
 
 [FIELD]
@@ -413,219 +439,6 @@ UUID = 2
 [FIELD_ACL__keys]
 ID = N
 
-[ISSUE]
-ID = 129
-REFID = 2
-TITLE = 2
-ID_PROJECT = 1
-KEY = 2
-ID_ISSUE_TYPE = 2
-DUE_DATE = 6
-ID_PROJECT_COMPONENT = 1
-ID_PROJECT_VERSION = 1
-ASSIGNED_ID_USER = 1
-DESCRIPTION = 34
-ESTIMATE = 2
-ACTUAL = 2
-ID_PRIORITY = 1
-ORDERING = 17
-ID_ISSUE_STATUS = 2
-ID_ISSUE_RESOLUTION = 2
-DATE_CREATED = 14
-DATE_UPDATED = 14
-DATE_ASSIGNED = 14
-DATE_STARTED = 14
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[ISSUE__keys]
-ID = N
-
-[ISSUE_ACTIVITY]
-ID = 129
-REFID = 2
-ID_ISSUE = 1
-ID_USER = 1
-ACTIVITY = 2
-NOTE = 34
-DATE = 14
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[ISSUE_ACTIVITY__keys]
-ID = N
-
-[ISSUE_ATTACHMENT]
-ID = 129
-REFID = 2
-ID_ISSUE = 1
-NAME = 2
-FILE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[ISSUE_ATTACHMENT__keys]
-ID = N
-
-[ISSUE_COMMENT]
-ID = 129
-REFID = 2
-ID_ISSUE = 1
-ID_USER = 1
-COMMENT = 34
-DATE = 6
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[ISSUE_COMMENT__keys]
-ID = N
-
-[ISSUE_LINKING_TYPE]
-ID = 129
-REFID = 2
-NAME = 2
-OUTWARD_RELATION = 2
-INWARD_RELATION = 2
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 1
-UUID = 2
-
-[ISSUE_LINKING_TYPE__keys]
-ID = N
-
-[ISSUE_RESOLUTION]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 1
-UUID = 2
-
-[ISSUE_RESOLUTION__keys]
-ID = N
-
-[ISSUE_STATUS]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 1
-UUID = 2
-
-[ISSUE_STATUS__keys]
-ID = N
-
-[ISSUE_TYPE]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 1
-UUID = 2
-
-[ISSUE_TYPE__keys]
-ID = N
-
-[ISSUE_WORKLOG]
-ID = 129
-REFID = 2
-ID_USER = 1
-ID_ISSUE = 1
-ELLAPSED_TIME = 2
-DATE = 14
-NOTE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[ISSUE_WORKLOG__keys]
-ID = N
-
-[LINKING_ISSUE]
-ID = 129
-REFID = 2
-ID_ISSUE = 1
-ID_ISSUE_LINKING_TYPE = 1
-RELATED_ID_ISSUE = 1
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[LINKING_ISSUE__keys]
-ID = N
-
-[MENU]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-CLASS = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[MENU__keys]
-ID = N
-
-[MENU_ITEM]
-ID = 129
-REFID = 2
-TITLE = 2
-CLASS = 2
-TAG_LINE = 2
-ID_MENU = 2
-PARENT = 1
-ID_PAGE = 1
-ID_POST = 1
-ID_POST_CATEGORY = 1
-PATH = 2
-CUSTOM_CONTENT = 34
-HAS_BREAK_AFTER = 17
-ORDERING = 17
-ACL_ID_USER_GROUP = 1
-HIERACHY = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[MENU_ITEM__keys]
-ID = N
-
 [OBJECT_ACL]
 ID = 129
 REFID = 2
@@ -659,149 +472,6 @@ WFID = 2
 UUID = 2
 
 [OPTION__keys]
-ID = N
-
-[PAGE]
-ID = 129
-REFID = 2
-NAME = 2
-TITLE = 2
-PARENT = 1
-SLUG = 2
-TAG_LINE = 2
-THUMB = 2
-BACKGROUND_IMAGE = 2
-IMAGE = 2
-VIDEO = 2
-META_KEYWORDS = 2
-META_DESCRIPTION = 2
-INTRODUCTION = 34
-CONTENT = 34
-FOOTER = 34
-ID_TEMPLATE = 2
-ADDITIONAL_CSS = 34
-CUSTOM_TOP_ID_MENU = 2
-CUSTOM_SIDE_ID_MENU = 2
-VIEW_MORE_TITLE = 2
-VIEW_MORE_ID_PAGE = 1
-VIEW_MORE_LINK = 2
-LATEST_UPDATE = 14
-NBR_VIEWS = 1
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-HIERACHY = 2
-
-[PAGE__keys]
-ID = N
-
-[PAGE_GALLERY]
-ID = 129
-REFID = 2
-TITLE = 2
-ID_PAGE = 1
-IMAGE = 2
-LINK_ID_PAGE = 1
-LINK_PATH = 2
-DESCRIPTION = 34
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PAGE_GALLERY__keys]
-ID = N
-
-[PAGE_LINK]
-ID = 129
-REFID = 2
-TITLE = 2
-ID_PAGE = 1
-FONT_AWESOME_ICON = 2
-LINK_ID_PAGE = 1
-LINK_PATH = 2
-ID_PAGE_LINK_TYPE = 2
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PAGE_LINK__keys]
-ID = N
-
-[PAGE_LINK_TYPE]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PAGE_LINK_TYPE__keys]
-ID = N
-
-[PAGE_SECTION]
-ID = 129
-REFID = 2
-TITLE = 2
-ID_PAGE = 1
-CODE = 2
-PARENT = 2
-TAG_LINE = 2
-IMAGE = 2
-FONT_AWESOME_ICON = 2
-BACKGROUND_IMAGE = 2
-BACKGROUND_COLOR = 2
-VIDEO = 2
-CONTENT = 34
-TAGS = 2
-VIEW_MORE_TITLE = 2
-VIEW_MORE_ID_PAGE = 1
-VIEW_MORE_LINK = 2
-HIDE_TITLE = 17
-IS_TAB_ANCHOR_SECTION = 17
-TAB_ANCHOR_TITLE = 2
-ORDERING = 17
-HIERACHY = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PAGE_SECTION__keys]
-ID = N
-
-[PAGE_WIDGET]
-ID = 129
-REFID = 2
-ID_PAGE = 1
-TITLE = 2
-CODE = 2
-LINK = 2
-IMAGE = 2
-ID_WIDGET_TYPE = 2
-ID_WIDGET_POSITION = 2
-CONTENT = 34
-HIDE_TITLE = 17
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PAGE_WIDGET__keys]
 ID = N
 
 [PARAMETER]
@@ -852,229 +522,32 @@ UUID = 2
 [PARAMETER_TYPE__keys]
 ID = N
 
-[PAYMENT_TYPE]
+[PERMISSION_SET]
 ID = 129
 REFID = 2
 NAME = 2
-CODE = 2
-IS_ENABLED = 17
-INSTRUCTION = 34
-ORDERING = 17
-NOTE = 2
 GUID = 1
 JSON = 34
-UDID = 1
 WFID = 2
+UDID = 1
 UUID = 2
 
-[PAYMENT_TYPE__keys]
+[PERMISSION_SET__keys]
 ID = N
 
-[POST]
+[PERMISSION_SET_ITEM]
 ID = 129
 REFID = 2
-TITLE = 2
-SLUG = 2
-ID_POST_TYPE = 2
-ID_POST_CATEGORY = 1
-IMAGE = 2
-META_KEYWORDS = 2
-META_DESCRIPTION = 2
-EXCERPT = 34
-CONTENT = 34
-TAGS = 2
-AUTHOR = 2
-EXTERNAL_LINK = 2
-ID_TEMPLATE = 2
-CREATION_DATE = 14
-LATEST_UPDATE = 14
-IS_FEATURED = 17
-NBR_VIEWS = 1
+ID_PERMISSION_SET = 1
+MODULE = 2
+ACTIONS = 34
 GUID = 1
 JSON = 34
-UDID = 1
 WFID = 2
-UUID = 2
-
-[POST__keys]
-ID = N
-
-[POST_CATEGORY]
-ID = 129
-REFID = 2
-NAME = 2
-SLUG = 2
-PARENT = 1
-DESCRIPTION = 34
-ID_TEMPLATE = 2
-ORDERING = 17
-HIERACHY = 2
-GUID = 1
-JSON = 34
 UDID = 1
-WFID = 2
 UUID = 2
 
-[POST_CATEGORY__keys]
-ID = N
-
-[POST_GALLERY]
-ID = 129
-REFID = 2
-TITLE = 2
-ID_POST = 1
-IMAGE = 2
-DESCRIPTION = 34
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[POST_GALLERY__keys]
-ID = N
-
-[POST_RELATION]
-ID = 129
-REFID = 2
-ID_POST = 1
-PEER_ID_POST = 1
-ID_POST_RELATION_TYPE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[POST_RELATION__keys]
-ID = N
-
-[POST_RELATION_TYPE]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[POST_RELATION_TYPE__keys]
-ID = N
-
-[POST_SECTION]
-ID = 129
-REFID = 2
-TITLE = 2
-ID_POST = 1
-TAG_LINE = 2
-IMAGE = 2
-BACKGROUND_IMAGE = 2
-BACKGROUND_COLOR = 2
-VIDEO = 2
-CONTENT = 34
-LINK_PATH = 2
-ORDERING = 17
-HIERACHY = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[POST_SECTION__keys]
-ID = N
-
-[POST_TYPE]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[POST_TYPE__keys]
-ID = N
-
-[PRIORITY]
-ID = 129
-REFID = 2
-NAME = 2
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 1
-UUID = 2
-
-[PRIORITY__keys]
-ID = N
-
-[PROJECT]
-ID = 129
-REFID = 2
-NAME = 2
-KEY = 2
-INFORMATION = 34
-LEAD_ID_USER = 1
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PROJECT__keys]
-ID = N
-
-[PROJECT_COMPONENT]
-ID = 129
-REFID = 2
-NAME = 2
-ID_PROJECT = 1
-LEAD_ID_USER = 1
-ORDERING = 17
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PROJECT_COMPONENT__keys]
-ID = N
-
-[PROJECT_USER]
-ID = 129
-REFID = 2
-ID_PROJECT = 1
-ID_USER = 1
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PROJECT_USER__keys]
-ID = N
-
-[PROJECT_VERSION]
-ID = 129
-REFID = 2
-NAME = 2
-ID_PROJECT = 1
-ORDERING = 17
-DUE_DATE = 6
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[PROJECT_VERSION__keys]
+[PERMISSION_SET_ITEM__keys]
 ID = N
 
 [RECYCLE_BIN]
@@ -1128,21 +601,6 @@ UDID = 1
 UUID = 2
 
 [SCREEN_FIELD__keys]
-ID = N
-
-[TEMPLATE]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-MODULE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[TEMPLATE__keys]
 ID = N
 
 [USER]
@@ -1227,6 +685,21 @@ UUID = 2
 [USER_MEMBERSHIP__keys]
 ID = N
 
+[USER_PACKAGE]
+ID = 129
+REFID = 2
+ID_USER = 1
+ID_ADMIN_PACKAGE = 2
+INSTALLATION_DATE = 6
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[USER_PACKAGE__keys]
+ID = N
+
 [USER_PREFERENCE]
 ID = 129
 REFID = 2
@@ -1241,6 +714,41 @@ WFID = 2
 UUID = 2
 
 [USER_PREFERENCE__keys]
+ID = N
+
+[USER_QUOTA]
+ID = 129
+REFID = 2
+ID_USER_GROUP = 1
+MODULE = 2
+OVERALL_LIMIT = 1
+MONTHLY_LIMIT = 1
+DAILY_LIMIT = 1
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[USER_QUOTA__keys]
+ID = N
+
+[USER_QUOTA_LOG]
+ID = 129
+REFID = 2
+ID_USER = 1
+MODULE = 2
+NBR_OVERALL = 1
+NBR_MONTHLY = 1
+NBR_DAILY = 1
+LATEST_UPDATE = 6
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[USER_QUOTA_LOG__keys]
 ID = N
 
 [USER_ROLE]
@@ -1282,34 +790,6 @@ UDID = 1
 UUID = 2
 
 [VALUE_TYPE__keys]
-ID = N
-
-[WIDGET_POSITION]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[WIDGET_POSITION__keys]
-ID = N
-
-[WIDGET_TYPE]
-ID = 129
-REFID = 2
-NAME = 2
-CODE = 2
-GUID = 1
-JSON = 34
-UDID = 1
-WFID = 2
-UUID = 2
-
-[WIDGET_TYPE__keys]
 ID = N
 
 [WORKFLOW]
