--- a/schema/extremeframework-git.links.ini
+++ b/schema/extremeframework-git.links.ini
@@ -27,16 +27,22 @@ ID_ADMIN_MENU = ADMIN_MENU:ID
 PARENT = ADMIN_MENU_ITEM:ID
 MODULE = ADMIN_MODULE:MODULE
 
-[ADMIN_ORDER]
-ID_PAYMENT_TYPE = PAYMENT_TYPE:CODE
-ID_ADMIN_ORDER_STATUS = ADMIN_ORDER_STATUS:CODE
+[ADMIN_MODULE]
+ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
 
-[ADMIN_ORDER_ITEM]
-ID_ADMIN_ORDER = ADMIN_ORDER:ID
-ID_ADMIN_PRODUCT = ADMIN_PRODUCT:ID
+[ADMIN_PACKAGE]
+ID_ADMIN_PACKAGE_CATEGORY = ADMIN_PACKAGE_CATEGORY:ID
 
-[ADMIN_PRODUCT]
-PRODUCT_ID_PAGE = PAGE:ID
+[ADMIN_PACKAGE_MENU]
+ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
+ID_ADMIN_MENU = ADMIN_MENU:ID
+
+[ADMIN_PACKAGE_PERMISSION]
+ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
+ID_PERMISSION_SET = PERMISSION_SET:ID
+
+[ADMIN_PACKAGE_SHORTCUT]
+ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
 
 [ADMIN_SEQUENCE]
 MODULE = ADMIN_MODULE:MODULE
@@ -47,6 +53,10 @@ MODULE = ADMIN_MODULE:MODULE
 [CHANGE_LOG]
 MODULE = ADMIN_MODULE:MODULE
 ID_USER = USER:ID
+
+[CUSTOM_ACCESS_RIGHT]
+ID_USER = USER:ID
+ID_PERMISSION_SET = PERMISSION_SET:ID
 
 [DASHBOARD]
 ID_ADMIN_MENU = ADMIN_MENU:ID
@@ -60,44 +70,6 @@ ID_USER_GROUP = USER_GROUP:ID
 ID_USER = USER:ID
 ID_ACL_TYPE = ACL_TYPE:ID
 
-[ISSUE]
-ID_PROJECT = PROJECT:ID
-ID_ISSUE_TYPE = ISSUE_TYPE:CODE
-ID_PROJECT_COMPONENT = PROJECT_COMPONENT:ID
-ID_PROJECT_VERSION = PROJECT_VERSION:ID
-ASSIGNED_ID_USER = USER:ID
-ID_PRIORITY = PRIORITY:ID
-ID_ISSUE_STATUS = ISSUE_STATUS:CODE
-ID_ISSUE_RESOLUTION = ISSUE_RESOLUTION:CODE
-
-[ISSUE_ACTIVITY]
-ID_ISSUE = ISSUE:ID
-ID_USER = USER:ID
-
-[ISSUE_ATTACHMENT]
-ID_ISSUE = ISSUE:ID
-
-[ISSUE_COMMENT]
-ID_ISSUE = ISSUE:ID
-ID_USER = USER:ID
-
-[ISSUE_WORKLOG]
-ID_USER = USER:ID
-ID_ISSUE = ISSUE:ID
-
-[LINKING_ISSUE]
-ID_ISSUE = ISSUE:ID
-ID_ISSUE_LINKING_TYPE = ISSUE_LINKING_TYPE:ID
-RELATED_ID_ISSUE = ISSUE:ID
-
-[MENU_ITEM]
-ID_MENU = MENU:CODE
-PARENT = MENU_ITEM:ID
-ID_PAGE = PAGE:ID
-ID_POST = POST:ID
-ID_POST_CATEGORY = POST_CATEGORY:ID
-ACL_ID_USER_GROUP = USER_GROUP:ID
-
 [OBJECT_ACL]
 MODULE = ADMIN_MODULE:MODULE
 ID_USER_GROUP = USER_GROUP:ID
@@ -106,69 +78,13 @@ ARG_ID_USER_GROUP = USER_GROUP:ID
 ARG_ID_USER = USER:ID
 ID_ACL_TYPE = ACL_TYPE:ID
 
-[PAGE]
-PARENT = PAGE:ID
-ID_TEMPLATE = TEMPLATE:CODE
-CUSTOM_TOP_ID_MENU = MENU:CODE
-CUSTOM_SIDE_ID_MENU = MENU:CODE
-VIEW_MORE_ID_PAGE = PAGE:ID
-
-[PAGE_GALLERY]
-ID_PAGE = PAGE:ID
-LINK_ID_PAGE = PAGE:ID
-
-[PAGE_LINK]
-ID_PAGE = PAGE:ID
-LINK_ID_PAGE = PAGE:ID
-ID_PAGE_LINK_TYPE = PAGE_LINK_TYPE:CODE
-
-[PAGE_SECTION]
-ID_PAGE = PAGE:ID
-PARENT = PAGE_SECTION:CODE
-VIEW_MORE_ID_PAGE = PAGE:ID
-
-[PAGE_WIDGET]
-ID_PAGE = PAGE:ID
-ID_WIDGET_TYPE = WIDGET_TYPE:CODE
-ID_WIDGET_POSITION = WIDGET_POSITION:CODE
-
 [PARAMETER]
 ID_PARAMETER_GROUP = PARAMETER_GROUP:ID
 ID_PARAMETER_TYPE = PARAMETER_TYPE:ID
 
-[POST]
-ID_POST_TYPE = POST_TYPE:CODE
-ID_POST_CATEGORY = POST_CATEGORY:ID
-ID_TEMPLATE = TEMPLATE:CODE
-
-[POST_CATEGORY]
-PARENT = POST_CATEGORY:ID
-ID_TEMPLATE = TEMPLATE:CODE
-
-[POST_GALLERY]
-ID_POST = POST:ID
-
-[POST_RELATION]
-ID_POST = POST:ID
-PEER_ID_POST = POST:ID
-ID_POST_RELATION_TYPE = POST_RELATION_TYPE:CODE
-
-[POST_SECTION]
-ID_POST = POST:ID
-
-[PROJECT]
-LEAD_ID_USER = USER:ID
-
-[PROJECT_COMPONENT]
-ID_PROJECT = PROJECT:ID
-LEAD_ID_USER = USER:ID
-
-[PROJECT_USER]
-ID_PROJECT = PROJECT:ID
-ID_USER = USER:ID
-
-[PROJECT_VERSION]
-ID_PROJECT = PROJECT:ID
+[PERMISSION_SET_ITEM]
+ID_PERMISSION_SET = PERMISSION_SET:ID
+MODULE = ADMIN_MODULE:MODULE
 
 [RECYCLE_BIN]
 MODULE = ADMIN_MODULE:MODULE
@@ -180,9 +96,6 @@ ID_WORKFLOW = WORKFLOW:CODE
 [SCREEN_FIELD]
 ID_SCREEN = SCREEN:CODE
 ID_VALUE_TYPE = VALUE_TYPE:CODE
-
-[TEMPLATE]
-MODULE = ADMIN_MODULE:MODULE
 
 [USER_GROUP]
 DEFAULT_ID_DASHBOARD = DASHBOARD:ID
@@ -196,9 +109,21 @@ ID_USER = USER:ID
 ID_USER_GROUP = USER_GROUP:ID
 ID_USER_ROLE = USER_ROLE:ID
 
+[USER_PACKAGE]
+ID_USER = USER:ID
+ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
+
 [USER_PREFERENCE]
 ID_USER = USER:ID
 ID_DASHBOARD = DASHBOARD:ID
+
+[USER_QUOTA]
+ID_USER_GROUP = USER_GROUP:ID
+MODULE = ADMIN_MODULE:MODULE
+
+[USER_QUOTA_LOG]
+ID_USER = USER:ID
+MODULE = ADMIN_MODULE:MODULE
 
 [WORKFLOW_APPLICATION]
 MODULE = ADMIN_MODULE:MODULE
