Support simple pages/admin pages

--- a/schema/extremeframework-git.ini
+++ b/schema/extremeframework-git.ini
@@ -201,7 +201,7 @@ ID = 129
 REFID = 2
 NAME = 2
 CODE = 2
-ID_ADMIN_PACKAGE_CATEGORY = 1
+ID_ADMIN_PACKAGE_CATEGORY = 2
 IMAGE = 2
 DESCRIPTION = 34
 ENTRY_PATH = 2
@@ -226,6 +226,7 @@ ID = N
 ID = 129
 REFID = 2
 NAME = 2
+CODE = 2
 GUID = 1
 JSON = 34
 WFID = 2
@@ -270,7 +271,7 @@ REFID = 2
 NAME = 2
 ID_ADMIN_PACKAGE = 2
 IMAGE = 2
-PATH = 34
+PATH = 2
 GUID = 1
 JSON = 34
 WFID = 2
@@ -278,6 +279,21 @@ UDID = 1
 UUID = 2
 
 [ADMIN_PACKAGE_SHORTCUT__keys]
+ID = N
+
+[ADMIN_PAGE]
+ID = 129
+REFID = 2
+TITLE = 2
+SLUG = 2
+CONTENT = 34
+GUID = 1
+JSON = 34
+UDID = 1
+WFID = 2
+UUID = 2
+
+[ADMIN_PAGE__keys]
 ID = N
 
 [ADMIN_PLUGIN]
@@ -540,7 +556,7 @@ ID = 129
 REFID = 2
 ID_PERMISSION_SET = 1
 MODULE = 2
-ACTIONS = 34
+ACTIONS = 2
 GUID = 1
 JSON = 34
 WFID = 2
