--- a/schema/extremeframework-git.links.ini
+++ b/schema/extremeframework-git.links.ini
@@ -31,7 +31,7 @@ MODULE = ADMIN_MODULE:MODULE
 ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
 
 [ADMIN_PACKAGE]
-ID_ADMIN_PACKAGE_CATEGORY = ADMIN_PACKAGE_CATEGORY:ID
+ID_ADMIN_PACKAGE_CATEGORY = ADMIN_PACKAGE_CATEGORY:CODE
 
 [ADMIN_PACKAGE_MENU]
 ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
