--- a/schema/extremeframework-git.ini
+++ b/schema/extremeframework-git.ini
@@ -203,6 +203,7 @@ ID = 129
 REFID = 2
 NAME = 2
 CODE = 2
+ID_ADMIN_PACKAGE_TYPE = 2
 ID_ADMIN_PACKAGE_CATEGORY = 2
 ID_ADMIN_PACKAGE_INDUSTRY = 2
 IMAGE = 2
@@ -215,7 +216,6 @@ AUTHOR_URL = 2
 PACKAGE_PATH = 2
 INSTALLATION_DATE = 6
 LATEST_UPDATE = 6
-ID_ADMIN_PACKAGE_TYPE = 2
 GUID = 1
 JSON = 34
 UDID = 1
@@ -494,9 +494,10 @@ ID = N
 ID = 129
 REFID = 2
 NAME = 2
+TITLE = 2
+SUBTITLE = 2
+ID_ADMIN_PACKAGE = 2
 ID_ADMIN_MENU = 1
-ID_DASHBOARD_LAYOUT = 1
-DASHBOARD_FILE_PATH = 2
 GUID = 1
 JSON = 34
 UDID = 1
@@ -504,6 +505,39 @@ WFID = 2
 UUID = 2
 
 [DASHBOARD__keys]
+ID = N
+
+[DASHBOARD_ITEM]
+ID = 129
+REFID = 2
+TITLE = 2
+ID_DASHBOARD = 1
+IMAGE = 2
+PATH = 2
+ID_DASHBOARD_ITEM_TYPE = 2
+ORDERING = 1
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[DASHBOARD_ITEM__keys]
+ID = N
+
+[DASHBOARD_ITEM_TYPE]
+ID = 129
+REFID = 2
+NAME = 2
+CODE = 2
+ORDERING = 17
+GUID = 1
+JSON = 34
+WFID = 2
+UDID = 1
+UUID = 2
+
+[DASHBOARD_ITEM_TYPE__keys]
 ID = N
 
 [FIELD]
