--- a/schema/extremeframework-git.links.ini
+++ b/schema/extremeframework-git.links.ini
@@ -32,9 +32,9 @@ MODULE = ADMIN_MODULE:MODULE
 ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
 
 [ADMIN_PACKAGE]
+ID_ADMIN_PACKAGE_TYPE = ADMIN_PACKAGE_TYPE:CODE
 ID_ADMIN_PACKAGE_CATEGORY = ADMIN_PACKAGE_CATEGORY:CODE
 ID_ADMIN_PACKAGE_INDUSTRY = ADMIN_PACKAGE_INDUSTRY:CODE
-ID_ADMIN_PACKAGE_TYPE = ADMIN_PACKAGE_TYPE:CODE
 
 [ADMIN_PACKAGE_MENU]
 ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
@@ -69,7 +69,12 @@ ID_CUSTOM_FIELD_TYPE = CUSTOM_FIELD_TYPE:CODE
 MODULE = ADMIN_MODULE:MODULE
 
 [DASHBOARD]
+ID_ADMIN_PACKAGE = ADMIN_PACKAGE:CODE
 ID_ADMIN_MENU = ADMIN_MENU:ID
+
+[DASHBOARD_ITEM]
+ID_DASHBOARD = DASHBOARD:ID
+ID_DASHBOARD_ITEM_TYPE = DASHBOARD_ITEM_TYPE:CODE
 
 [FIELD]
 MODULE = ADMIN_MODULE:MODULE
